Cleanup at the beginning and end of the page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
   >
 
     <Fragment slot="subtitle">
-      I&#8217;m a <strong>software engineering leader</strong> and people manager with a passion for solving customer problems. I do this by
+      I&#8217;m a <strong>software engineering leader</strong> and <strong>people manager</strong> with a passion for solving customer problems. I do this by
       focusing on the most impactful deliverables, building cohesive teams, streamlining processes, and improving quality.
       <br />
       <br />
