Expose blog on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
   <Fragment slot="header">
     <Header
       links={[
-        // { text: 'Blog', href: '#blog' },
+         { text: 'Blog', href: '/blog' },
       ]}
       actions={[
         {
