Added my current role on Stripe

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,6 +87,9 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
       <br />
       I&#8217;ve launched and run high-scale services for some of the world&#8217;s largest technology companies. I&#8217;ve also
       worked in startups to invent the future.
+      <br />
+      <br />
+      I current work at <a href="https://stripe.com/" class="underline">Stripe</a> on Connect.
     </Fragment>
   </Hero>
 
