--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -6,6 +6,6 @@ import appleTouchIcon from '~/assets/favicons/apple-touch-icon.png';
 ---
 
 <link rel="shortcut icon" href={favIcon} />
-<link rel="icon" type="image/png" sizes="32x32" href={favIcon32.src}>
-<link rel="icon" type="image/png" sizes="16x16" href={favIcon16.src}>
+<link rel="icon" type="image/png" sizes="32x32" href={favIcon32.src} />
+<link rel="icon" type="image/png" sizes="16x16" href={favIcon16.src} />
 <link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} />
