--- a/src/components/widgets/Testimony.astro
+++ b/src/components/widgets/Testimony.astro
@@ -1,46 +1,54 @@
 ---
 import Image from '~/components/common/Image.astro';
-const {
-    title,
-    testimonial,
-    image,
-    name,
-    job
-} = Astro.props;
+
+interface Props {
+  title?: string;
+  testimonial?: string;
+  image?: string | unknown;
+  name?: string;
+  job?: string;
+}
+
+const { title, testimonial, image, name, job } = Astro.props;
 ---
+
 <div class="flex h-auto">
-    <div class="flex flex-col p-4 md:p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-600">
-      {title && <h2 class="text-lg font-medium leading-6 pb-4">{title}</h2>}
-      {testimonial && (
+  <div class="flex flex-col p-4 md:p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-600">
+    {title && <h2 class="text-lg font-medium leading-6 pb-4">{title}</h2>}
+    {
+      testimonial && (
         <blockquote class="flex-auto">
           <p class="text-muted">&#8220; {testimonial} &#8221;</p>
         </blockquote>
-      )}
+      )
+    }
 
-      <hr class="border-slate-200 dark:border-slate-600 my-4" />
+    <hr class="border-slate-200 dark:border-slate-600 my-4" />
 
-      <div class="flex items-center">
-        {image && (
+    <div class="flex items-center">
+      {
+        image && (
           <div class="h-10 w-10 rounded-full border border-slate-200 dark:border-slate-600">
             {typeof image === 'string' ? (
               <Fragment set:html={image} />
             ) : (
               <Image
                 class="h-10 w-10 rounded-full border border-slate-200 dark:border-slate-600 min-w-full min-h-full"
-                width={40}
-                height={40}
                 widths={[400, 768]}
                 layout="fixed"
-                {...(image as any)}
+                {...image}
+                width={40}
+                height={40}
               />
             )}
           </div>
-        )}
+        )
+      }
 
-        <div class="grow ml-3 rtl:ml-0 rtl:mr-3">
-          {name && <p class="text-base font-semibold">{name}</p>}
-          {job && <p class="text-xs text-muted">{job}</p>}
-        </div>
+      <div class="grow ml-3 rtl:ml-0 rtl:mr-3">
+        {name && <p class="text-base font-semibold">{name}</p>}
+        {job && <p class="text-xs text-muted">{job}</p>}
       </div>
     </div>
   </div>
+</div>
